2008-07-23  Johan Dahlin  <johan@gnome.org>

	* glib/pyglib.c (_pyglib_destroy_notify):
	Rename the function too, not just the prototype!

2008-07-21  Johan Dahlin  <johan@gnome.org>

	* glib/glibmodule.c (pyglib_idle_add), (pyglib_timeout_add),
	(pyglib_timeout_add_seconds), (pyglib_io_add_watch):
	* glib/pyglib-private.h:
	* glib/pyglib.c (pyglib_destroy_notify), (_pyglib_handler_marshal):
	* glib/pyglib.h:
	* glib/pygsource.c (pyg_source_set_callback):
	Make pyglib_destroy_notify and pyglib_handler_marshal private.
	Add a few public prototypes.

2008-07-21  Johan Dahlin  <johan@gnome.org>

	* glib/glibmodule.c (pyglib_idle_add), (pyglib_timeout_add),
	(pyglib_timeout_add_seconds), (pyglib_io_add_watch),
	(pyglib_source_remove), (pyglib_child_watch_add),
	(pyglib_markup_escape_text), (pyglib_get_current_time),
	(pyglib_main_depth), (pyglib_filename_display_name),
	(pyglib_filename_display_basename), (pyglib_filename_from_utf8),
	(pyglib_get_application_name), (pyglib_set_application_name),
	(pyglib_get_prgname), (pyglib_set_prgname), (pyglib_register_api),
	(pyglib_register_error):
	Mark as static, rename from pyg_* -> pyglib_*. Fill in api struct,
	rename struct and remove function suffix.

2008-07-21  Johan Dahlin  <johan@gnome.org>

	* glib/Makefile.am:
	* glib/glibmodule.c (pyg_idle_add), (pyg_timeout_add),
	(pyg_timeout_add_seconds), (pyg_io_add_watch),
	(pyglib_register_api), (pyglib_register_error),
	(pyglib_register_version_tuples), (init_glib):
	* glib/pygiochannel.c (py_io_channel_next),
	(py_io_channel_shutdown), (py_io_channel_set_encoding),
	(py_io_channel_read_chars), (py_io_channel_write_chars),
	(py_io_channel_write_lines), (py_io_channel_flush),
	(py_io_channel_set_flags), (py_io_channel_read_line),
	(py_io_channel_read_lines), (py_io_channel_seek),
	(py_io_channel_init), (pyglib_iochannel_register_types):
	* glib/pygiochannel.h:
	* glib/pyglib-private.h:
	* glib/pyglib.c (pyglib_threads_enabled),