@@ -27,12 +27,12 @@ typedef struct {
     PyObject *callback;
     PyObject *data;
     PyObject *buffer;
-} PyGAsyncRequestNotifyRead;
+} PyGIONotifyRead;
 
 static void
 async_result_callback_marshal_read(GObject *source_object, 
 				   GAsyncResult *result, 
-				   PyGAsyncRequestNotifyRead *notify)
+				   PyGIONotifyRead *notify)
 {
     PyObject *ret;
     PyGILState_STATE state;
@@ -69,7 +69,7 @@ async_result_callback_marshal_read(GObject *source_object,
 
     Py_DECREF(notify->callback);
     Py_XDECREF(notify->data);
-    g_slice_free(PyGAsyncRequestNotifyRead, notify);
+    g_slice_free(PyGIONotifyRead, notify);
 
     pyg_gil_state_release(state);
 }
@@ -157,9 +157,9 @@ _wrap_g_input_stream_read_async(PyGObject *self,
   int io_priority = G_PRIORITY_DEFAULT;
   PyGObject *pycancellable = NULL;
   GCancellable *cancellable;
-  PyGAsyncRequestNotifyRead *notify;
+  PyGIONotifyRead *notify;
 
-  notify = g_slice_new0(PyGAsyncRequestNotifyRead);
+  notify = g_slice_new0(PyGIONotifyRead);
 
   if (!PyArg_ParseTupleAndKeywords(args, kwargs,
 				   "lO|iOO:InputStream.read_async",
@@ -170,14 +170,14 @@ _wrap_g_input_stream_read_async(PyGObject *self,
 				   &pycancellable,
 				   &notify->data))
     {
-      g_slice_free(PyGAsyncRequestNotifyRead, notify);
+      g_slice_free(PyGIONotifyRead, notify);
       return NULL;
     }
 
   if (!PyCallable_Check(notify->callback))
     {
       PyErr_SetString(PyExc_TypeError, "callback argument not callable");
-      g_slice_free(PyGAsyncRequestNotifyRead, notify);
+      g_slice_free(PyGIONotifyRead, notify);
       return NULL;
     }
   Py_INCREF(notify->callback);
@@ -245,9 +245,9 @@ _wrap_g_input_stream_close_async(PyGObject *self,
   int io_priority = G_PRIORITY_DEFAULT;
   PyGObject *pycancellable = NULL;
   GCancellable *cancellable;
-  PyGAsyncRequestNotify *notify;
+  PyGIONotify *notify;
 
-  notify = g_slice_new0(PyGAsyncRequestNotify);
+  notify = g_slice_new0(PyGIONotify);
 
   if (!PyArg_ParseTupleAndKeywords(args, kwargs,
 				   "O|iOO:InputStream.close_async",
@@ -257,14 +257,14 @@ _wrap_g_input_stream_close_async(PyGObject *self,
 				   &pycancellable,
 				   &notify->data))
     {
-      g_slice_free(PyGAsyncRequestNotify, notify);
+      g_slice_free(PyGIONotify, notify);
       return NULL;
     }
 
   if (!PyCallable_Check(notify->callback))
     {
       PyErr_SetString(PyExc_TypeError, "callback argument not callable");
-      g_slice_free(PyGAsyncRequestNotify, notify);
+      g_slice_free(PyGIONotify, notify);
       return NULL;
     }
   Py_INCREF(notify->callback);
