@@ -35,7 +35,7 @@ headers
 typedef struct {
     PyObject *callback;
     PyObject *data;
-} PyGAsyncRequestNotify;
+} PyGIONotify;
 
 static void
 py_decref_callback (gpointer data)
@@ -46,7 +46,7 @@ py_decref_callback (gpointer data)
 static void
 async_result_callback_marshal(GObject *source_object, 
 			      GAsyncResult *result, 
-			      PyGAsyncRequestNotify *notify)
+			      PyGIONotify *notify)
 {
     PyObject *ret;
     PyGILState_STATE state;
@@ -73,7 +73,7 @@ async_result_callback_marshal(GObject *source_object,
 
     Py_DECREF(notify->callback);
     Py_XDECREF(notify->data);
-    g_slice_free(PyGAsyncRequestNotify, notify);
+    g_slice_free(PyGIONotify, notify);
 
     pyg_gil_state_release(state);
 }
@@ -234,13 +234,13 @@ _wrap_g_mount_unmount(PyGObject *self,
 {
     static char *kwlist[] = { "callback", "flags",
 			      "cancellable", "user_data", NULL };
-    PyGAsyncRequestNotify *notify;
+    PyGIONotify *notify;
     PyObject *py_flags = NULL;
     PyGObject *py_cancellable = NULL;
     GMountUnmountFlags flags = G_MOUNT_UNMOUNT_NONE;
     GCancellable *cancellable;
   
-    notify = g_slice_new0(PyGAsyncRequestNotify);
+    notify = g_slice_new0(PyGIONotify);
     
     if (!PyArg_ParseTupleAndKeywords(args, kwargs,
                                      "O|OOO:GMount.unmount",
@@ -251,14 +251,14 @@ _wrap_g_mount_unmount(PyGObject *self,
 				     &notify->data))
             
     {
-      g_slice_free(PyGAsyncRequestNotify, notify);
+      g_slice_free(PyGIONotify, notify);
       return NULL;
     }
 
     if (!PyCallable_Check(notify->callback))
     {
 	PyErr_SetString(PyExc_TypeError, "callback argument not callable");
-	g_slice_free(PyGAsyncRequestNotify, notify);
+	g_slice_free(PyGIONotify, notify);
 	return NULL;
     }
     Py_INCREF(notify->callback);
