@@ -67,9 +67,9 @@ _wrap_g_output_stream_write_async(PyGObject *self,
   int io_priority = G_PRIORITY_DEFAULT;
   PyGObject *pycancellable = NULL;
   GCancellable *cancellable;
-  PyGAsyncRequestNotify *notify;
+  PyGIONotify *notify;
 
-  notify = g_slice_new0(PyGAsyncRequestNotify);
+  notify = g_slice_new0(PyGIONotify);
 
   if (!PyArg_ParseTupleAndKeywords(args, kwargs,
 				   "s#O|iOO:OutputStream.write_async",
@@ -80,14 +80,14 @@ _wrap_g_output_stream_write_async(PyGObject *self,
 				   &pycancellable,
 				   &notify->data))
     {
-      g_slice_free(PyGAsyncRequestNotify, notify);
+      g_slice_free(PyGIONotify, notify);
       return NULL;
     }
 
   if (!PyCallable_Check(notify->callback))
     {
       PyErr_SetString(PyExc_TypeError, "callback argument not callable");
-      g_slice_free(PyGAsyncRequestNotify, notify);
+      g_slice_free(PyGIONotify, notify);
       return NULL;
     }
   Py_INCREF(notify->callback);
@@ -119,9 +119,9 @@ _wrap_g_output_stream_close_async(PyGObject *self,
   int io_priority = G_PRIORITY_DEFAULT;
   PyGObject *pycancellable = NULL;
   GCancellable *cancellable;
-  PyGAsyncRequestNotify *notify;
+  PyGIONotify *notify;
 
-  notify = g_slice_new0(PyGAsyncRequestNotify);
+  notify = g_slice_new0(PyGIONotify);
 
   if (!PyArg_ParseTupleAndKeywords(args, kwargs,
 				   "O|iOO:OutputStream.close_async",
@@ -131,7 +131,7 @@ _wrap_g_output_stream_close_async(PyGObject *self,
 				   &pycancellable,
 				   &notify->data))
     {
-      g_slice_free(PyGAsyncRequestNotify, notify);
+      g_slice_free(PyGIONotify, notify);
       return NULL;
     }
 
@@ -141,7 +141,7 @@ _wrap_g_output_stream_close_async(PyGObject *self,
   if (!PyCallable_Check(notify->callback))
     {
       PyErr_SetString(PyExc_TypeError, "callback argument not callable");
-      g_slice_free(PyGAsyncRequestNotify, notify);
+      g_slice_free(PyGIONotify, notify);
       return NULL;
     }
   Py_INCREF(notify->callback);
